Bug 248369 - RPMLint desktop files errors - invalid categories and mime types
Summary: RPMLint desktop files errors - invalid categories and mime types
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
: 288077 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-19 13:24 UTC by Jaroslav Reznik
Modified: 2011-12-02 18:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jaroslav Reznik 2010-08-19 13:24:00 UTC
Version:           unspecified (using KDE 4.5.0) 
OS:                Linux

RPMLint errors in desktop files:

bluedevil.x86_64: E: invalid-desktopfile /usr/share/applications/kde4/bluedevil-wizard.desktop value "Qt;KDE;Bluetooth;Network;" for key "Categories" in group "Desktop Entry" contains an unregistered value "Bluetooth"; values extending the format should start with "X-"
bluedevil.x86_64: E: invalid-desktopfile /usr/share/applications/kde4/bluedevil-audio.desktop (will be fatal in the future): value "virtual/bluedevil-audio;" for key "MimeType" in group "Desktop Entry" contains value "virtual/bluedevil-audio" which is an invalid MIME type: "virtual" is an unregistered media type
bluedevil.x86_64: E: invalid-desktopfile /usr/share/applications/kde4/bluedevil-audio.desktop value "Qt;KDE;Bluetooth;Network;Audio;" for key "Categories" in group "Desktop Entry" contains an unregistered value "Bluetooth"; values extending the format should start with "X-"
bluedevil.x86_64: E: invalid-desktopfile /usr/share/applications/kde4/bluedevil-audio.desktop (will be fatal in the future): value "Audio" in key "Categories" in group "Desktop Entry" requires another category to be present among the following categories: AudioVideo
bluedevil.x86_64: E: invalid-desktopfile /usr/share/applications/kde4/bluedevil-monolithic.desktop value "Qt;KDE;Bluetooth;Network;" for key "Categories" in group "Desktop Entry" contains an unregistered value "Bluetooth"; values extending the format should start with "X-"
bluedevil.x86_64: E: invalid-desktopfile /usr/share/applications/kde4/bluedevil-sendfile.desktop (will be fatal in the future): value "virtual/bluedevil-sendfile;" for key "MimeType" in group "Desktop Entry" contains value "virtual/bluedevil-sendfile" which is an invalid MIME type: "virtual" is an unregistered media type
bluedevil.x86_64: E: invalid-desktopfile /usr/share/applications/kde4/bluedevil-sendfile.desktop value "Qt;KDE;Bluetooth;Network;" for key "Categories" in group "Desktop Entry" contains an unregistered value "Bluetooth"; values extending the format should start with "X-"
bluedevil.x86_64: E: invalid-desktopfile /usr/share/applications/kde4/bluedevil-input.desktop (will be fatal in the future): value "virtual/bluedevil-input;" for key "MimeType" in group "Desktop Entry" contains value "virtual/bluedevil-input" which is an invalid MIME type: "virtual" is an unregistered media type
bluedevil.x86_64: E: invalid-desktopfile /usr/share/applications/kde4/bluedevil-input.desktop value "Qt;KDE;Bluetooth;Network;Input;" for key "Categories" in group "Desktop Entry" contains an unregistered value "Bluetooth"; values extending the format should start with "X-"
bluedevil.x86_64: E: invalid-desktopfile /usr/share/applications/kde4/bluedevil-input.desktop value "Qt;KDE;Bluetooth;Network;Input;" for key "Categories" in group "Desktop Entry" contains an unregistered value "Input"; values extending the format should start with "X-"


Reproducible: Didn't try

Steps to Reproduce:
Run rpmlint on RPM package in Fedora (not yet ready, I can provide SPEC).

Actual Results:  
rpmlint invalid-desktopfile errors

Expected Results:  
no rpmlint errors - fixed categories and mime types
Comment 1 Alex Fiestas 2011-07-26 21:29:27 UTC
Git commit 4e780cd498d418faf9a4e194e248fa7e3ade5726 by Alex Fiestas.
Committed on 26/07/2011 at 23:26.
Pushed by afiestas into branch 'master'.

Set the correct Category in .desktop and use correct mimetype parent

We were not following the standards neither in .desktop or mimetype,
because of that rpmlint and similar toolks were screaming.

Since I'm no mimetype/desktop expert I will backport this patch only
when proven stable, in that case it will be backported to 1.0.6 and
1.1.2

BUG: 248369

M  +1    -1    src/monolithic/bluedevil-monolithic.desktop
M  +2    -2    src/actionplugins/audio/helper/bluedevil-audio.desktop
M  +2    -2    src/actionplugins/input/helper/bluedevil-input.desktop
M  +2    -2    src/actionplugins/sendfile/helper/bluedevil-sendfile.desktop
M  +8    -5    src/bluedevil-mime.xml
M  +5    -5    src/kio/bluetooth/kiobluetooth.cpp
M  +1    -1    src/wizard/bluedevil-wizard.desktop
M  +3    -3    src/actionplugins/network/helper/bluedevil-network.desktop

http://commits.kde.org/bluedevil/4e780cd498d418faf9a4e194e248fa7e3ade5726
Comment 2 Lamarque V. Souza 2011-12-02 18:09:15 UTC
*** Bug 288077 has been marked as a duplicate of this bug. ***