Set the correct Category in .desktop and use correct mimetype parent

We were not following the standards neither in .desktop or mimetype,
because of that rpmlint and similar toolks were screaming.

Since I'm no mimetype/desktop expert I will backport this patch only
when proven stable, in that case it will be backported to 1.0.6 and
1.1.2

BUG: 248369